package sase.multi.calculator;

public enum MPTCalculatorTypes {
	NO_SHARING,
	NO_REORDERING,
	EXHAUSTIVE,
	ITERATIVE_IMPROVEMENT,
	SIMULATED_ANNEALING,
	TABU_SEARCH,
}
